force-app/main/default/objects/IFv2_HelpURL__c/IFv2_HelpURL__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Help URL</label>
</CustomObject>