force-app/main/default/objects/IFv2_HelpURL__c/fields/IFv2_Active__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>