force-app/main/default/objects/IFv2_HelpURL__c/fields/IFv2_Description__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Description__c</fullName>
    <description>Used to store few lines about what does the link does</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>