force-app/main/default/objects/IFv2_HelpURL__c/fields/IFv2_LinkURL__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LinkURL__c</fullName>
    <description>used to store link url, example:https://www.google.com/</description>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>